# intel-gpu-validation

./: pyproject.toml
.github/workflows/: pylint.yml
common/artifact_manager/: manifest.py  models.py
common/artifacts/: __init__.py  config.py  enums.py  exceptions.py  manifest.py  models.py  types.py
common/artifacts/manager/: config.py  manager.py
docs/: CONTRIBUTING.md  PROJECT_HANDOFF.md  README.md  ROADMAP.md  SECURITY.md  architecture.md
docs/developer/: overview.md  shared.md
docs/developer/api/: artifact-access-api.md  artifact-manager-api.md  dashboard-api.md  operational-database-api.md  scheduler-api.md  worker-api.md
docs/developer/architecture/: architecture.md  glossary.md  lifecycle.md  principles.md  system-context.md
docs/developer/contracts/: artifact-package.md  build-manifest.md  execution-directory-reference.md  validation-request.md  validation-result.md  worker-manifest.md
docs/developer/foundation/: compatibility.md  domain-types.md  primitives.md
docs/developer/models/: build-identity.md
docs/developer/platform/: capability-model.md  configuration.md  execution-environment.md  (+3 more)
docs/handoff/: 01-executive-summary.md  02-system-architecture.md  03-repository-layout.md  04-builder.md  05-artifact-manager.md  06-manifests.md  07-scheduler.md  08-worker.md  09-storage.md  10-cache.md  11-buildbot.md  12-testing.md  13-redis.md  14-mqtt.md  15-dashboard.md  16-security.md  17-deployment.md  18-roadmap.md  19-engineering-guidelines.md
tests/: test_build_manifest.py  test_worker_manifest.py
tests/data/: valid-build-manifest.json
(+47 files in other folders)
