[project]
name = "intel-gpu-validation"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "pydantic>=2.11",
    "minio>=7.2",
    "zstandard>=0.23",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"